<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- START SCREEN -->

    <string name="app_name">Sprache der Oberpfalz</string>
    <string name="action_settings">Opener An/ Aus</string>
    <string name="start_map">KARTE</string>
    <string name="start_quiz">QUIZ</string>
    <string name="start_interview">USW.</string>
    <string name="info_text">Berühren Sie die Knöpfe um zu starten</string>

    <!-- QUIZ APP -->

    <string name="fortschritt_text">Frage 1 von 5</string>
    <string name="back">  ZURÜCK</string>
    <string name="perfect">Super! Alles Richtig! Herzlichen Glückwunsch!</string>
    <string name="grats">Fast Perfekt, Herzlichen Glückwunsch!</string>
    <string name="try_again">Leider nicht so gut, versuchen Sie es erneut!</string>
    <string name="frage_1">Der Begriff „Glupperla“ bedeutet? </string>
    <string name="frage_2">Was bedeutet der Begriff „Scherzl“? </string>
    <string name="frage_3">Was bezeichnet der Begriff „Nußgackl“? </string>
    <string name="frage_4">Der Begriff „Guggern“ bedeutet? </string>
    <string name="frage_5">Was bedeutet der Begriff „Müchscheckl“? </string>
    <string name="anwort_11">Perlhühner</string>
    <string name="anwort_12">Wäscheklammern</string>
    <string name="anwort_13">Sandalen</string>
    <string name="anwort_21">Witz</string>
    <string name="anwort_22">Rinde</string>
    <string name="anwort_23">Randstück eines Brotes</string>
    <string name="anwort_31">Eichelhäher</string>
    <string name="anwort_32">Nussknacker</string>
    <string name="anwort_33">Kastanie</string>
    <string name="anwort_41">Guckloch</string>
    <string name="anwort_42">Henne</string>
    <string name="anwort_43">Plastiktüte</string>
    <string name="anwort_51">Löwenzahn</string>
    <string name="anwort_52">Milchschaum</string>
    <string name="anwort_53">Fleckenmuster der Kuh</string>

    <!-- KARTE APP -->

    <string name="Tirschenreuth">Tirschenreuth</string>
    <string name="Pressath">Pressath</string>
    <string name="Niedermurach">Niedermurach</string>
    <string name="Waldmuenchen">Waldmünchen</string>
    <string name="Kallmuenz">Kallmünz</string>
    <string name="Neumarkt">Neumarkt</string>
    <string name="Pfatter">Pfatter</string>
    <string name="Tirschenreuth_kurz">Tir</string>
    <string name="Pressath_kurz">Press</string>
    <string name="Niedermurach_kurz">Niederm</string>
    <string name="Waldmuenchen_kurz">Waldmü</string>
    <string name="Kallmuenz_kurz">Kallm</string>
    <string name="Neumarkt_kurz">Neum</string>
    <string name="Pfatter_kurz">Pfat</string>
    <string name="title_activity_map">Sprache der Oberpfalz</string>
    <string name="info_box_instructions_title">Anleitung:</string>
    <string name="info_box_test_text">TestText</string>
    <string name="info_box_anleitung_text">Bitte berühren Sie einen der Knöpfe auf der Karte. \n\nSie können sich ein Beispiel anhören und dieses Klangbeispiel dann mit der Aussprache in den anderen Orten vergleichen. Drücken Sie auch hierzu einen der Knöpfe auf der Karte.</string>
    <string name="info_box_thanx_text">Die Hörbeispiele wurden freundlicherweise vom Sprechenden Sprachatlas von Bayern der Landesbibliothek Bayern zur Verfügung gestellt. Weitere Informationen finden Sie unter \nwww.bayerische-landesbibliothek online.de/sprachatlas</string>
    <string name="help_button_text">HILFE</string>
    <string name="back_button_text">zurück</string>
    <string name="text_audio_bsp_1">Schluckauf</string>
    <string name="text_audio_bsp_2">Zuckerbonbon</string>
    <string name="text_audio_bsp_3">Ihr</string>
    <string name="text_audio_bsp_4">Zahlen</string>
    <string name="text_audio_bsp_5">Stechmücke</string>
    <string name="text_audio_bsp_6">sein</string>
    <string name="text_audio_bsp_7">Gabel/ Husten</string>
    <string name="text_audio_bsp_8">Wochentage</string>
    <string name="text_audio_bsp_9">Schnee</string>
    <string name="text_audio_bsp_10">Sommersprossen</string>

    <!-- INTERVIEW APP -->

    <string name="play_button_interview">Interview</string>
    <string name="play_button_bauvertrag">Der Bauantrag</string>
    <string name="more_info">Mehr Infos</string>
    <string name="interview_title">Interviews</string>
    <string name="interviewed_person_four">Der erfolgreiche Autor und Kabarettist Toni Lauerer (*1959)\n\n 1. Interview:\nToni Laurer spricht über seine Erfahrungen mit dem oberpfälzer Dialekt.\n\n 2. „Der Bauantrag“: Beamten - Bayerisch\nToni Lauerer erzählt in seinem Gedicht „Der Bauantrag“ von einem Briefwechsel zwischen Behörden und Bürgern.</string>
    <string name="interviewed_person_two">Eine Schottin in der Oberpfalz:\n\nIm Interview erzählt Frances Mathews (*1969) von ihren Erfahrungen im Alltag mit dem Oberpfälzischen.</string>
    <string name="interviewed_person_three">Ein Weißrusse in der Oberpfalz\n\nIm Interview erzählt Boris (*1979) von seiner Meinung zu den Oberpfälzischen Dialekten.</string>
    <string name="interviewed_person_one">Ludwig Zehetner (*1939) ist ein bayerischer Lehrer, Professor, Mundartforscher und Schriftsteller. Im Interview erläutert er warum der Dialekt eine Bereicherung ist und was das Besondere am „oberpfälzer Dialekt“ ist.</string>
    <string name="person_one">Prof. Dr. Ludwig Zehetner</string>
    <string name="person_two">Frances Mathews</string>
    <string name="person_three">Boris Velikouski</string>
    <string name="person_four">Toni Lauerer</string>
    <string name="back_to_picture">ZURÜCK ZUM BILD</string>
    <string name="stop_button_interview">Stop</string>
    
    <!--  WIDGET -->
	<string name="widget_text">Berühren Sie den Bildschirm um mit dem Programm zu interagieren!\nWir wünschen Ihnen Viel Spaß mit der Ausstellung!</string>
</resources>
